Transpiler: Refactoring - Erste Vorbereitung auf die Nutzung mit mehreren Java-Unterprojekten